syntax = "proto3";

import "block_proof.proto";

option go_package = "github.com/alphabill-org/alphabill/pkg/wallet/backend/bp;bp";

// bills with tx proofs
message Bills {
  repeated Bill bills = 1;
}

// bill with tx proof
message Bill {
  bytes id = 1;
  uint64 value = 2;
  bytes tx_hash = 3;
  bool is_dc_bill = 4;
  TxProof tx_proof = 5;
  // block number when fee credit bill balance was last updated
  uint64 fc_block_number = 6;
}
