syntax = "proto3";
package rpc;

option go_package = "gitdc.ee.guardtime.com/alphabill/alphabill/internal/rpc/payment;payment";

// Difference from spec is caused because joins are not available in Testnet
message PaymentRequest {
  enum PaymentType {
    TRANSFER = 0;
    SPLIT = 1;
  }
  uint64 bill_id = 1;
  PaymentType payment_type = 2;
  uint32 amount = 3;
  bytes payee_predicate = 4;
  bytes backlink = 5;
  bytes predicate_argument = 6;
}

message PaymentResponse {
  string payment_id = 1;
}

message PaymentStatusRequest {
  string payment_id = 1;
}

// Simplified for now. Will be replaced when proof is defined.
message PaymentStatusResponse {
  bool status = 1;
}

// The proof delivery service is put into BSN for now.
// Might be changed, when proof delivery service is more detailed.
service Payments {
  rpc MakePayment(PaymentRequest) returns (PaymentResponse) {};
  rpc PaymentStatus(PaymentStatusRequest) returns (PaymentStatusResponse) {};
}